<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Tab Bar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tabBar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#00B3FF"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- App Logo -->
        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/applogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="16dp" />

        <!-- App Name -->
        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="LabXplorer"
            android:fontFamily="sans-serif-black"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/appLogo"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- AR Fragment -->
<!--    <fragment-->
<!--        android:id="@+id/arFragment"-->
<!--        android:name="com.google.ar.sceneform.ux.ArFragment"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tabBar"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent" />-->

    <TextView
        android:id="@+id/experimentTitle"
        android:layout_width="379dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#C5A2CE"
        android:padding="16dp"
        android:text="@string/upper_consolute_temperature_of_phenol_water_system"
        android:textAlignment="center"
        android:textSize="37px"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabBar" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="416dp"
        android:layout_height="557dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/experimentTitle"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/aimText"
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:background="#B1B1B1"
            android:paddingTop="0dp"
            android:text="@string/aim_n_tto_determine_upper_consolute_temperature_of_a_n_tphenol_water_system_n"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/procedureText"
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:background="#B1B1B1"
            android:text="@string/procedure_n_t1_weight_4g_of_phenol_n_t2_add_2ml_of_water_n_t3_heat_and_stir_n_t4_note_temperature_t1_c_and_t2_c_n"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/observeText"
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:background="#B1B1B1"
            android:paddingBottom="15dp"
            android:text="@string/overservations_n_t1_weight_of_phenol_w1_4g_n_t2_density_of_distilled_water_1_g_ml_n_t3_density_of_phenol_1_071_g_ml"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="240dp"
            android:layout_marginTop="10dp"
            android:contentDescription="Experimental Diagram"
            android:src='@drawable/expdiagcr'
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/btnVisualize"
            android:layout_width="229dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="0dp"
            android:padding="0dp"
            android:text="@string/visualize_in_ar"
            android:textSize="15dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
